--- a/CN.html
+++ b/CN.html
@@ -339,12 +339,12 @@
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
                         <a href="blogs_CN/buyMeACoffee.html">请我喝杯咖啡🌹</a>
+                        <a href="blogs_CN/cuilanliu.html">以纪念我逝去的亲人</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>请选择您的语言</option>
-                            <option value="index.html">自动（映射你的设备）</option>
                             <option value="EN.html">English🇺🇸</option>
                             <option value="CN.html">中文🇨🇳</option>
-                            <option value="JA.html">日本🇯🇵</option>
+                            <option value="https://www-haozheli-com.translate.goog/CN.html?_x_tr_sl=zh-CN&_x_tr_tl=ja&_x_tr_hl=ja&_x_tr_pto=wapp">日本 🇯🇵 (Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인🇰🇷 (Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français🇫🇷 (Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch🇩🇪 (Google Translate)</option>
