--- a/EN.html
+++ b/EN.html
@@ -343,9 +343,9 @@
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <a href="blogs/buyMeACoffee.html">Buy Me A Coffee🌹</a>
+                        <a href="blogs/cuilanliu.html">In memory of my departed family members</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
-                            <option value="index.html">Auto (Mirror Your Device)</option>
                             <option value="EN.html">English (US) 🇺🇸</option>
                             <option value="CN.html">简体中文 🇨🇳</option>
                             <option value="JA.html">日本 🇯🇵 </option>
