--- a/blogs_CN/mulanli.html
+++ b/blogs_CN/mulanli.html
@@ -225,23 +225,23 @@
         }
 
         .bg-white {
-            background-color: #fff;
+            background-color: rgb(21, 2, 2);
         }
 
         .bg-teal-light {
-            background-color: #64d5ca;
+            background-color: #d0d0d0;
         }
 
         .bg-blue-dark {
-            background-color: #2779bd;
+            background-color: #8c8c8c;
         }
 
         .bg-indigo-light {
-            background-color: #7886d7;
+            background-color: #a9a9a9;
         }
 
         .bg-purple-light {
-            background-color: #a779e9;
+            background-color: #dcdcdc;
         }
 
         .bg-no-repeat {
@@ -365,15 +365,15 @@
         }
 
         .text-black {
-            color: #22292f;
+            color: #fdfdfd;
         }
 
         .text-grey-darkest {
-            color: #3d4852;
+            color: #cfcfcf;
         }
 
         .text-grey-darker {
-            color: #606f7b;
+            color: #cfcfcf;
         }
 
         .text-2xl {
@@ -463,11 +463,11 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        1933-2023</p>
+                        1933年1月24日 - 2023年1月1日<br><br></p>
 
-                    <a href="https://www.haozheli.com">
+                    <a href="https://www.haozheli.com/CN.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            回到主页
+                            前往我的网站主页
                         </button>
                     </a>
 
@@ -481,25 +481,5 @@
         </div>
         <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-        <script>
-            function addDarkmodeWidget() {
-              const options = {
-                  bottom: 'unset', // default: '32px'
-                  right: 'unset', // default: '32px'
-                  left: '50px', // default: 'unset'
-                  time: '0.5s', // default: '0.3s'
-                  mixColor: '#fff', // default: '#fff'
-                  backgroundColor: '#fff',  // default: '#fff'
-                  buttonColorDark: '#100f2c',  // default: '#100f2c'
-                  buttonColorLight: '#fff', // default: '#fff'
-                  saveInCookies: true, // default: true,
-                  label: '🌓', // default: ''
-                  autoMatchOsTheme: true // default: true
-                }
-              const darkmode = new Darkmode(options);
-              darkmode.showWidget();
-            }
-            window.addEventListener('load', addDarkmodeWidget);
-        </script>
     </body>
 </html>
