--- a/index.html
+++ b/index.html
@@ -343,12 +343,12 @@
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <a href="blogs/buyMeACoffee.html">Buy Me A Coffee🌹</a>
+                        <a href="blogs/cuilanliu.html">In memory of my departed family members</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
-                            <option value="index.html">Auto (Mirror Your Device)</option>
                             <option value="EN.html">English (US) 🇺🇸</option>
                             <option value="CN.html">简体中文 🇨🇳</option>
-                            <option value="JA.html">日本 🇯🇵 </option>
+                            <option value="https://www-haozheli-com.translate.goog/CN.html?_x_tr_sl=zh-CN&_x_tr_tl=ja&_x_tr_hl=ja&_x_tr_pto=wapp">日本 🇯🇵 (Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 🇰🇷 (Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français 🇫🇷 (Google Translate)</option>
                             <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch 🇩🇪 (Google Translate)</option>
@@ -384,9 +384,9 @@
         var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
         localStorage.setItem('locale', language)
         if (language.indexOf("zh-") !== -1) {
-            window.location = 'CN.html'
-        } else if (language.indexOf('ja') !== -1) {
-            window.location = 'JA.html'   
+            window.location = 'blogs_CN/cuilanliu.html'
+        }  else if (language.indexOf('en') !== -1) {
+            window.location = 'blogs/cuilanliu.html'   
         }
     </script>
 </body>
