--- a/blogs/cuilanliu.html
+++ b/blogs/cuilanliu.html
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE html>
-<html lang="ja">
+<!DOCTYPE html>
+<html lang="en">
     <head>
-<title>教育</title>
+<title>In memory of my grandmother</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -225,23 +225,23 @@
         }
 
         .bg-white {
-            background-color: #fff;
+            background-color: rgb(21, 2, 2);
         }
 
         .bg-teal-light {
-            background-color: #64d5ca;
+            background-color: #d0d0d0;
         }
 
         .bg-blue-dark {
-            background-color: #2779bd;
+            background-color: #8c8c8c;
         }
 
         .bg-indigo-light {
-            background-color: #7886d7;
+            background-color: #a9a9a9;
         }
 
         .bg-purple-light {
-            background-color: #a779e9;
+            background-color: #dcdcdc;
         }
 
         .bg-no-repeat {
@@ -365,15 +365,15 @@
         }
 
         .text-black {
-            color: #22292f;
+            color: #fdfdfd;
         }
 
         .text-grey-darkest {
-            color: #3d4852;
+            color: #cfcfcf;
         }
 
         .text-grey-darker {
-            color: #606f7b;
+            color: #cfcfcf;
         }
 
         .text-2xl {
@@ -457,50 +457,29 @@
         <div class="md:flex min-h-screen">
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
-                    <div class="text-black text-5xl md:text-15xl font-black">教育</div>
+                    <div class="text-black text-5xl md:text-15xl font-black">
+                        Cuilan Liu                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
-                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">イリノイ大学アーバナシャンペーン校 2022-2026<br>コンピュータサイエンスの学士 + 音楽</p>
+                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
+                        February 15, 1946 - January 29, 2023<br><br>My grandma has left me with many wonderful memories and I will always miss her. In honor of my grandma, my personal website will remain black and white until February 6. You can continue to visit my website by clicking the button below</p>
 
-                    <a href="https://www.haozheli.com/uploads/academicHistory.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">学問の歴史</button>
+                    <a href="https://www.haozheli.com/EN.html">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            Visit My Website
+                        </button>
                     </a>
 
-                    <p><br></p>
-
-                    <a href="coursera.html">
-                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">コーセラ</button>
-                    </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/education.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/grandmother.jpg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
         <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-        <script>
-            function addDarkmodeWidget() {
-              const options = {
-                  bottom: 'unset', // default: '32px'
-                  right: 'unset', // default: '32px'
-                  left: '50px', // default: 'unset'
-                  time: '0.5s', // default: '0.3s'
-                  mixColor: '#fff', // default: '#fff'
-                  backgroundColor: '#fff',  // default: '#fff'
-                  buttonColorDark: '#100f2c',  // default: '#100f2c'
-                  buttonColorLight: '#fff', // default: '#fff'
-                  saveInCookies: true, // default: true,
-                  label: '🌓', // default: ''
-                  autoMatchOsTheme: true // default: true
-                }
-              const darkmode = new Darkmode(options);
-              darkmode.showWidget();
-            }
-            window.addEventListener('load', addDarkmodeWidget);
-        </script>
     </body>
 </html>
