--- a/CN.html
+++ b/CN.html
@@ -380,7 +380,7 @@
           var index = Math.floor(Math.random() * greetings.length)
           var greeting = greetings[index];
           var language = languages[index];
-          document.querySelector('h1').innerHTML = greeting + ",";
+          document.querySelector('h1').innerHTML = greeting;
           document.querySelector('p').innerHTML = "在" + language + "中，这个词的意思是是你好！";
         };
     </script>
