--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           var index = Math.floor(Math.random() * greetings.length)
           var greeting = greetings[index];
           var language = languages[index];
-          document.querySelector('h1').innerHTML = greeting + ",";
+          document.querySelector('h1').innerHTML = greeting;
           document.querySelector('p').innerHTML = "In " + language + ", this means hello!";
         };
     </script>
