--- a/CN.html
+++ b/CN.html
@@ -375,13 +375,13 @@
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     <script>
         window.onload = function() {
-          var greetings = ['你好, ', 'Bonjour, ', 'こんにちは, ', 'Hello, ', '안녕하세요, ', 'Здравствуйте ', 'Aloha, ', 'Hallo, ', 'chào, ', 'Ciao, ', 'Hola, '];
+          var greetings = ['你好', 'Bonjour', 'こんにちは', 'Hello', '안녕하세요', 'Здравствуйте', 'Aloha', 'Hallo', 'chào', 'Ciao', 'Hola'];
           var languages = ['中文', '法语', '日语', '英语', '韩语', '俄语', '夏威夷语', '德语', '越南语', '意大利语', '西班牙语']
           var index = Math.floor(Math.random() * greetings.length)
           var greeting = greetings[index];
           var language = languages[index];
-          document.querySelector('h1').innerHTML = greeting;
-          document.querySelector('p').innerHTML = "在" + language + "中，这个词的意思是是你好！";
+          document.querySelector('h1').innerHTML = greeting + ',';
+          document.querySelector('p').innerHTML = "在" + language + "中," + greeting + "的意思是你好！";
         };
     </script>
 
