--- a/EN.html
+++ b/EN.html
@@ -382,13 +382,13 @@
     <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     <script>
         window.onload = function() {
-          var greetings = ['你好, ', 'Bonjour, ', 'こんにちは, ', 'Hello, ', '안녕하세요, ', 'Здравствуйте ', 'Aloha, ', 'Hallo, ', 'chào, ', 'Ciao, ', 'Hola, '];
+          var greetings = ['你好', 'Bonjour', 'こんにちは', 'Hello', '안녕하세요', 'Здравствуйте', 'Aloha', 'Hallo', 'chào', 'Ciao', 'Hola'];
           var languages = ['Chinese', 'French', 'Japanese', 'English', 'Korean', 'Russian', 'Hawaiian', 'German', 'Vietnamese', 'Italian', 'Spanish']
           var index = Math.floor(Math.random() * greetings.length)
           var greeting = greetings[index];
           var language = languages[index];
-          document.querySelector('h1').innerHTML = greeting;
-          document.querySelector('p').innerHTML = "In " + language + ", this means hello!";
+          document.querySelector('h1').innerHTML = greeting + ',';
+          document.querySelector('p').innerHTML = "In " + language + ", " + greeting + " means hello!";
         };
     </script>
 
