--- a/blogs/greeting-effect.html
+++ b/blogs/greeting-effect.html
@@ -497,10 +497,10 @@
 
             var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
             localStorage.setItem('locale', language)
-            if (language.indexOf("en") !== -1) {
-                window.location = 'https://haozheli.notion.site/JavaScript-bf2a95bc130148b985db442da3228860'
+            if (language.indexOf("zh-") !== -1) {
+                window.location = 'https://www.notion.so/haozheli/JavaScript-bf2a95bc130148b985db442da3228860'
             }  else {
-                window.location = 'https://haozheli.notion.site/JavaScript-bf2a95bc130148b985db442da3228860'   
+                window.location = 'https://www.notion.so/haozheli/Using-JavaScript-to-implement-greeting-effects-in-different-languages-in-web-pages-580a630c0f4d47c7ac50e3165f24943c'   
             }
         </script>
     </body>
