--- a/EN.html
+++ b/EN.html
@@ -290,7 +290,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>Blog</h3>
-                <p>I will post my daily shares and feelings here</p><a href=""#>查看往期文章</a>
+                <p>I will post my daily shares and feelings here</p><a href=""#>Read More</a>
             </div><!-- end title -->
 			
 			<div class="row">
@@ -330,7 +330,7 @@
 							<ul>
                                 <li>by Haozhe Li</li>
                                 <li>Oct 16, 2021</li>
-                                <li><a href="blogs/davinci-resolve-experience.html" onclick="myFunction()" value="alert"><b> READ HERE </b></a></li>
+                                <li><a href="blogs/davinci-resolve-experience.html"><b> READ HERE </b></a></li>
                             </ul>
 							<p></p>
 						</div>
