--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>Blog</h3>
-                <p>I will post my daily shares and feelings here</p><a href=""#>查看往期文章</a>
+                <p>I will post my daily shares and feelings here</p><a href=""#>Read More</a>
             </div><!-- end title -->
 			
 			<div class="row">
@@ -330,7 +330,7 @@
 							<ul>
                                 <li>by Haozhe Li</li>
                                 <li>Oct 16, 2021</li>
-                                <li><a href="blogs/davinci-resolve-experience.html" onclick="myFunction()" value="alert"><b> READ HERE </b></a></li>
+                                <li><a href="blogs/davinci-resolve-experience.html"><b> READ HERE </b></a></li>
                             </ul>
 							<p></p>
 						</div>
@@ -450,15 +450,14 @@
           document.querySelector('p').innerHTML = "In " + language + ", " + greeting + " means hello!";
         };
     </script>
-
     <script type="text/javascript">
 
         var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
         localStorage.setItem('locale', language)
         if (language.indexOf("zh-") !== -1) {
-            window.location = 'blogs_CN/cuilanliu.html'
+            window.location = 'CN.html'
         }  else {
-            window.location = 'blogs/cuilanliu.html'   
+            window.location = 'EN.html'   
         }
     </script>
 
