--- a/EN.html
+++ b/EN.html
@@ -309,7 +309,7 @@
 							<ul>
                                 <li>by Haozhe Li</li>
                                 <li>Feb 3, 2023</li>
-                                <li><a href="blogs/greeting-effect.html"><b> READ HERE </b></a></li>
+                                <li><a href="blogs/greeting-effect/index.html"><b> READ HERE </b></a></li>
                             </ul>
 							<p></p>
 						</div>
