--- a/CN.html
+++ b/CN.html
@@ -304,7 +304,7 @@
                                 <ul>
                                     <li>by Haozhe Li</li>
                                     <li>Feb 5, 2023</li>
-                                    <li><a href="blogs/greeting-effect.html"><b> 阅读 </b></a></li>
+                                    <li><a href="blogs_CN/greeting-effect/index.html"><b> 阅读 </b></a></li>
                                 </ul>
                                 <p></p>
                             </div>
