--- a/CN.html
+++ b/CN.html
@@ -285,7 +285,7 @@
             <div class="container">
                 <div class="section-title text-left">
                     <h3>博客</h3>
-                    <p>我会将我的所见所想分享在这里！</p><a href=""#>查看往期文章</a>
+                    <p>我会将我的所见所想分享在这里！</p><a href="https://www.notion.so/haozheli/Haozhe-Li-s-Blog-6e0aa792c6324d23abf1a2abf4859481?pvs=4">查看往期文章</a>
                 </div><!-- end title -->
                 
                 <div class="row">
@@ -304,7 +304,7 @@
                                 <ul>
                                     <li>by Haozhe Li</li>
                                     <li>Feb 5, 2023</li>
-                                    <li><a href="blogs_CN/greeting-effect/index.html"><b> 阅读 </b></a></li>
+                                    <li><a href="https://www.notion.so/haozheli/JavaScript-bf2a95bc130148b985db442da3228860?pvs=4"><b> 阅读 </b></a></li>
                                 </ul>
                                 <p></p>
                             </div>
@@ -325,7 +325,7 @@
                                 <ul>
                                     <li>by Haozhe Li</li>
                                     <li>Oct 16, 2021</li>
-                                    <li><a href="blogs/davinci-resolve-experience.html"><b> 阅读 </b></a></li>
+                                    <li><a href="https://haozheli.notion.site/2100-Resolve-Studio-6c8be5feb09a4f259c68827a822a27e9"><b> 阅读 </b></a></li>
                                 </ul>
                                 <p></p>
                             </div>
