--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>Blog</h3>
-                <p>I will post my daily shares and feelings here</p><a href=""#>Read More</a>
+                <p>I will post my daily shares and feelings here</p><a href="https://haozheli.notion.site/Haozhe-Li-s-Blog-6e0aa792c6324d23abf1a2abf4859481">Read More</a>
             </div><!-- end title -->
 			
 			<div class="row">
@@ -309,7 +309,7 @@
 							<ul>
                                 <li>by Haozhe Li</li>
                                 <li>Feb 3, 2023</li>
-                                <li><a href="blogs/greeting-effect/index.html"><b> READ HERE </b></a></li>
+                                <li><a href="https://www.notion.so/haozheli/Using-JavaScript-to-implement-greeting-effects-in-different-languages-in-web-pages-580a630c0f4d47c7ac50e3165f24943c?pvs=4"><b> READ HERE </b></a></li>
                             </ul>
 							<p></p>
 						</div>
@@ -330,7 +330,7 @@
 							<ul>
                                 <li>by Haozhe Li</li>
                                 <li>Oct 16, 2021</li>
-                                <li><a href="blogs/davinci-resolve-experience.html"><b> READ HERE </b></a></li>
+                                <li><a href="https://www.notion.so/haozheli/What-it-s-like-to-spend-2-100-to-switch-to-a-genuine-Da-Vinci-Resolve-Studio-for-a-month-aa69bfb900414f39a4d3fedea4464be2?pvs=4"><b> READ HERE </b></a></li>
                             </ul>
 							<p></p>
 						</div>
