--- a/EN.html
+++ b/EN.html
@@ -10,7 +10,7 @@
  
      <!-- Site Metas -->
     <title>Haozhe Li - Student | Developer | Artist</title>  
-    <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
+    <meta name="keywords" content='李浩哲, Haozhe Li, haozheli, Li Haozhe, lihaozhe'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
 
