--- a/CN.html
+++ b/CN.html
@@ -10,7 +10,7 @@
  
      <!-- Site Metas -->
     <title>李浩哲 - 学生 ｜开发者 ｜ 艺术家</title>  
-    <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
+    <meta name="keywords" content='李浩哲, Haozhe Li, haozheli, Li Haozhe, lihaozhe'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
 
