--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2><b>ABOUT ME</b></h2>
-                        <p> Hi, I'm Haozhe Li, or Howard, and I'm a computer science and music major at the University of Illinois.	"A cellist who loves programming" is the most accurate statement that can define me. I have studied cello since I was a child and participated in symphony orchestras for almost 10 years as a principal cellist. After entering college life, I gradually became interested in computer programming and began to learn programming languages such as Python and Java.</p>
-						<p> I am also a personal video creator, I often upload tutorials on VLOG, cinematic shots and video editing effects on Bilibili and Youtube， and have received millions of views.</p>
+                        <p> Greetings, my name is Haozhe Li, also known as Howard, and I am a student majoring in Computer Science and Music at the University of Illinois. I am accurately described as a "cellist who loves programming", as I have a passion for both classical music and computer technology. I have had a lifelong love affair with the cello, having begun my studies as a child and serving as a principal cellist in symphony orchestras for nearly a decade. During my college years, I developed an interest in computer programming and have since gained proficiency in programming languages such as Python and Java.</p>
+						<p> In addition to my academic pursuits, I am also a personal video creator. I frequently publish tutorials, vlogs, and showcase my skills in creating cinematic shots and video editing effects on platforms such as Bilibili and YouTube. I have garnered significant viewership, with millions of views on my content.</p>
                         <a onclick='return confirm("Good to see you my friend, hope you have a wonderful day! ")' class="sim-btn btn-hover-new" data-text="Hi"><span>SAY HI TO ME</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
