--- a/CN.html
+++ b/CN.html
@@ -304,7 +304,7 @@
                                 <ul>
                                     <li>by Haozhe Li</li>
                                     <li>Feb 5, 2023</li>
-                                    <li><a href="https://www.notion.so/haozheli/JavaScript-bf2a95bc130148b985db442da3228860?pvs=4"><b> 阅读 </b></a></li>
+                                    <li><a href="https://haozheli.notion.site/JavaScript-bf2a95bc130148b985db442da3228860"><b> 阅读 </b></a></li>
                                 </ul>
                                 <p></p>
                             </div>
