--- a/EN.html
+++ b/EN.html
@@ -309,7 +309,7 @@
 							<ul>
                                 <li>by Haozhe Li</li>
                                 <li>Feb 3, 2023</li>
-                                <li><a href="https://www.notion.so/haozheli/Using-JavaScript-to-implement-greeting-effects-in-different-languages-in-web-pages-580a630c0f4d47c7ac50e3165f24943c?pvs=4"><b> READ HERE </b></a></li>
+                                <li><a href="https://haozheli.notion.site/Using-JavaScript-to-implement-greeting-effects-in-different-languages-in-web-pages-580a630c0f4d47c7ac50e3165f24943c"><b> READ HERE </b></a></li>
                             </ul>
 							<p></p>
 						</div>
@@ -330,7 +330,7 @@
 							<ul>
                                 <li>by Haozhe Li</li>
                                 <li>Oct 16, 2021</li>
-                                <li><a href="https://www.notion.so/haozheli/What-it-s-like-to-spend-2-100-to-switch-to-a-genuine-Da-Vinci-Resolve-Studio-for-a-month-aa69bfb900414f39a4d3fedea4464be2?pvs=4"><b> READ HERE </b></a></li>
+                                <li><a href="https://haozheli.notion.site/What-it-s-like-to-spend-2-100-to-switch-to-a-genuine-Da-Vinci-Resolve-Studio-for-a-month-aa69bfb900414f39a4d3fedea4464be2"><b> READ HERE </b></a></li>
                             </ul>
 							<p></p>
 						</div>
