--- a/CN.html
+++ b/CN.html
@@ -224,7 +224,7 @@
 
                 <div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
-						<img src="uploads/machineProject.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/MP.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
 							<a href="blogs_CN/MP_CS124.html" class="hoverbutton global-radius">GO</a>
 						</div>
