--- a/blogs/coursera.html
+++ b/blogs/coursera.html
@@ -497,9 +497,9 @@
 
                     <p><br></p>
 
-                    <a href="https://www.coursera.org/learn/machine-learning">
+                    <a href="https://coursera.org/share/f15c2973444a6f1586ee12b4cd95d9dc">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Supervised Machine Learning: Regression and Classification (In Progress)
+                            Supervised Machine Learning: Regression and Classification
                         </button>
                     </a>
 
