--- a/EN.html
+++ b/EN.html
@@ -228,7 +228,7 @@
 
                 <div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
-						<img src="uploads/machineProject.png" class="img-fluid" alt="pic of portfolio">
+						<img src="uploads/MP.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
 							<a href="blogs/MP_CS124.html" class="hoverbutton global-radius">GO</a>
 						</div>
