--- a/blogs/MP.html
+++ b/blogs/MP.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<title>404 Not Found</title>
+<title>Machine Project</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -437,7 +437,7 @@
                 font-size: 1.875rem;
             }
 
-            .md\:text-15xl {
+            .md\:text-10xl {
                 font-size: 9rem;
             }
 
@@ -458,23 +458,43 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        404                    </div>
+                        Machine Project                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
+                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
+                        What is Machine Project?</p>
                     <p class="text-grey-darker text-2xl md:text-1xl font-light mb-8 leading-normal">
-                        貌似你到了我从未踏足过的地方了呢                  </p>
+                        It is a programming assignment or task given to students to develop and apply their coding skills and knowledge of software engineering principles.</p>
+                    <p><br></p>
+                    
+                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
+                        Why is Machine Project Important?</p>
+                    <p class="text-grey-darker text-2xl md:text-1xl font-light mb-8 leading-normal">As they provide practical experience in problem-solving and enable assessment of students' programming skills and understanding of computer science concepts.</p>
+                    <p><br></p>
 
-                    <a href="https://www.haozheli.com">
+                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
+                        What machine projects I have completed?</p>
+                        <p><br></p>
+
+                    <a href="MP_CS128.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            回到主页
+                            CS 128
+                        </button>
+                    </a>
+
+                    <p><br></p>
+
+                    <a href="MP_CS124.html">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            CS 124
                         </button>
                     </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('uploads/banner.jpg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/MP.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
@@ -499,6 +519,6 @@
               darkmode.showWidget();
             }
             window.addEventListener('load', addDarkmodeWidget);
-        </script>    
+        </script>
     </body>
 </html>
