--- a/blogs/MP_CS124.html
+++ b/blogs/MP_CS124.html
@@ -462,8 +462,8 @@
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
-                    <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Machine Project is a very important part of CS124 and one of my favorite parts. In MP3, we can add some custom features to the Android program. Here is my introduction to the features, and the DEMO of the Android program              </p>
+                    <p class="text-grey-darker text-2xl md:text-1xl font-light mb-8 leading-normal">
+                        Machine Project is a very important part of CS124 and one of my favorite parts. Students are asked to desgin a android application to find and lable their favorite place around U of I. Several procedures are included in this assignment. In MP3, we can add some custom features to the Android program. Here is my introduction to the features, and the DEMO of the Android program              </p>
 
                     <a href="https://www.bilibili.com/video/BV1ad4y1s7yu/?vd_source=50c60dd066c2d71108664951f25b60a4">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
