--- a/CN.html
+++ b/CN.html
@@ -226,7 +226,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/MP.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs_CN/MP_CS124.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs_CN/MP.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
