--- a/EN.html
+++ b/EN.html
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>RESUME</h3>
-                <p align="center">Please visit my <a href="https://www.linkedin.com/in/haozhe-li-306742252/">LinkedIn</a> or view my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
+                <p align="center">Please visit my <a href="https://www.linkedin.com/in/haozhe-li-306742252/">LinkedIn</a> or view my <a href="uploads/Haozhe Li_Resume.pdf">CV</a> here.</p>
             </div><!-- end title -->
 
             <div class="row">
@@ -230,7 +230,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/MP.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="blogs/MP_CS124.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/MP.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
