--- a/blogs/buyMeACoffee.html
+++ b/blogs/buyMeACoffee.html
@@ -463,7 +463,7 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-1xl font-light mb-8 leading-normal">
-                        It costs a lot to run this site (domain and maintenance, etc.) and it takes a lot of my time. If you think the site is doing well, buy me a cup of coffee!</p>
+                        It costs a lot to run this site (domain and maintenance, etc.) and it takes a lot of my time. This page may have access to Google Ads. if possible, please click on the ads, thank you! If you think the site is doing well, buy me a cup of coffee</p>
 
                     <a href="https://www.paypal.com/paypalme/haozheli04">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
