--- a/blogs_CN/buyMeACoffee.html
+++ b/blogs_CN/buyMeACoffee.html
@@ -463,7 +463,7 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-1xl font-light mb-8 leading-normal">
-                        运营本网站需要不少成本（域名以及维护等等），也花费了我不少时间。如果你觉得网站做的还不错的话，请我喝一杯咖啡吧！</p>
+                        运营本网站需要不少成本（域名以及维护等等），也花费了我不少时间。本页面可能会接入Google Ads。如果可能的话，请点击一下广告，谢谢！如果你觉得网站做的还不错的话，请我喝一杯咖啡吧</p>
 
                     <a href="https://www.paypal.com/paypalme/haozheli04">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
