--- a/blogs/greetingsSample.html
+++ b/blogs/greetingsSample.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>My Simple HTML File</title>
-  </head>
+  <!--Google AdSense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6325147925807351"
+    crossorigin="anonymous"></script>
+   </head>
+</head>
   <body>
     <h1></h1>
     <p></p>
