--- a/uploads/academicHistory.html
+++ b/uploads/academicHistory.html
@@ -37,6 +37,10 @@ function windowOpen(window_url) {
 }
 //  End script hiding -->
 </SCRIPT>
+<!--Google AdSense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6325147925807351"
+    crossorigin="anonymous"></script>
+   </head>
 </head>
 <body>
 <div class="headerwrapperdiv">
