--- a/uploads/weChat.html
+++ b/uploads/weChat.html
@@ -70,6 +70,10 @@ EaseConverter.defaultViewer = new EaseConverter.Viewer({});
 }catch(e){}
 </script>
 <title></title>
+<!--Google AdSense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6325147925807351"
+    crossorigin="anonymous"></script>
+   </head>
 </head>
 <body>
 <div id="sidebar">
