--- a/blogs/Northgate.html
+++ b/blogs/Northgate.html
@@ -452,7 +452,11 @@
             }
         }
         </style>
-    </head>
+    <!--Google AdSense-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6325147925807351"
+    crossorigin="anonymous"></script>
+   </head>
+</head>
     <body class="antialiased font-sans">
         <div class="md:flex min-h-screen">
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
