--- a/CN.html
+++ b/CN.html
@@ -280,7 +280,7 @@
             <div class="container">
                 <div class="section-title text-left">
                     <h3>博客</h3>
-                    <p>我会将我的所见所想分享在这里！</p><a href="https://www.notion.so/haozheli/Haozhe-Li-s-Blog-6e0aa792c6324d23abf1a2abf4859481?pvs=4">查看往期文章</a>
+                    <p>我会将我的所见所想分享在这里！</p><a href="https://haozheli.notion.site/e038feee63eb4752aa858e95ea87ee67">查看往期文章</a>
                 </div><!-- end title -->
                 
                 <div class="row">
