--- a/blogs_CN/buyMeACoffee.html
+++ b/blogs_CN/buyMeACoffee.html
@@ -487,7 +487,7 @@
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/buyMeACoffee.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/给我买杯咖啡.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
