--- a/CN.html
+++ b/CN.html
@@ -219,7 +219,7 @@
 
                 <div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
-						<img src="uploads/MP.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/机器项目.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
 							<a href="blogs_CN/MP.html" class="hoverbutton global-radius">GO</a>
 						</div>
@@ -228,7 +228,7 @@
 
                			<div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
-						<img src="uploads/personalWebsite.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/个人网站.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
 							<a href="blogs_CN/personalWebsite.html" class="hoverbutton global-radius">GO</a>
 						</div>
@@ -246,7 +246,7 @@
 
                 <div class="col-md-4 col-sm-6 gallery-grid video">
 					<div class="gallery-single fix">
-						<img src="uploads/photography.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/摄影.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
 							<a href="blogs_CN/photography.html" class="hoverbutton global-radius">GO</a>
 						</div>
@@ -255,7 +255,7 @@
                 
                 <div class="col-md-4 col-sm-6 gallery-grid video">
 					<div class="gallery-single fix">
-						<img src="uploads/tutorial.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/教程.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
 							<a href="blogs_CN/tutorial.html" class="hoverbutton global-radius">GO</a>
 						</div>
@@ -264,7 +264,7 @@
 
                 <div class="col-md-4 col-sm-6 gallery-grid audio">
 					<div class="gallery-single fix">
-						<img src="uploads/musicProduction.png" class="img-fluid" alt="投资组合图">
+						<img src="uploads/音乐制作.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
 							<a href="blogs_CN/musicProduction.html" class="hoverbutton global-radius">GO</a>
 						</div>
