--- a/blogs_CN/Spaceneedle.html
+++ b/blogs_CN/Spaceneedle.html
@@ -469,7 +469,7 @@
                     <p class="text-grey-darker text-2xl md:text-1xl font-light mb-8 leading-normal">
                         西雅图太空针塔               </p>
                     
-                        <iframe align="center" width="500" height="450" title="Panorama Viewer" scrolling="no" src="https://renderstuff.com/tools/360-panorama-web-viewer-embed/?image=https://www.haozheli.com/uploads/Spaceneedle.jpeg"></iframe>
+                        <iframe align="center" class="darkmode-ignore" width="500" height="450" title="Panorama Viewer" scrolling="no" src="https://renderstuff.com/tools/360-panorama-web-viewer-embed/?image=https://www.haozheli.com/uploads/Spaceneedle.jpeg"></iframe>
 
                     <a href="https://www.haozheli.com/blogs_CN/photography.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
