--- a/EN.html
+++ b/EN.html
@@ -397,7 +397,7 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-    s
+    <div class="section db" style="z-index: 2">
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-left">
